--- a/env.template
+++ b/env.template
@@ -1,21 +1,23 @@
-# LINE LIFF Configuration Example
-# Copy this file to .env.local and fill in your actual values
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
 
-# LINE LIFF ID
-# Get your LIFF ID from LINE Developers Console: https://developers.line.biz/console/
-# Format: 1234567890-abcdefgh
-NEXT_PUBLIC_LIFF_ID=your-liff-id-here
+NEXT_PUBLIC_LIFF_ID=
+NEXT_PUBLIC_LIFF_APPROVE_ID=
 
-# Firebase Configuration
-# Get these from Firebase Console: https://console.firebase.google.com/
-NEXT_PUBLIC_FIREBASE_API_KEY=your-api-key
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
-NEXT_PUBLIC_FIREBASE_APP_ID=your-app-id
+LINE_CHANNEL_ACCESS_TOKEN=
 
-# Instructions:
-# 1. Copy this file: cp env.template .env.local
-# 2. Edit .env.local and replace all "your-*-here" values with actual values
-# 3. Restart your dev server: npm run dev
+# =====================================================
+# For Auto-Login System (Added by Antigravity)
+# =====================================================
+# Control Mock LIFF behavior (Set to "true" to skip actual LINE Login in Dev)
+NEXT_PUBLIC_MOCK_LIFF="true"
+
+# Firebase Admin SDK Config (REQUIRED for Auto-Login to work)
+# Please fill these in from your Firebase Console -> Project Settings -> Service Accounts
+FIREBASE_PROJECT_ID=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PRIVATE_KEY=""
